banner & about me

--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -84,8 +84,9 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Raleway', sans-serif;
   vertical-align: baseline;
+  line-height: 1.35rem;
 }
 
 article,
