--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -1,3 +1,5 @@
+@import '../../scss/settings.scss';
+
 .AboutMe {
     margin-top: 35rem;
     display: flex;
@@ -38,6 +40,50 @@
 
         &-Item:nth-child(2) {
             margin-top: 0rem;
+        }
+    }
+}
+
+@media screen and (max-width: $breakpoint-one) {
+    .AboutMe {
+        &-Basic {
+            &-Item {
+                &-Name {
+                    width: 50%;
+                }
+    
+                &-Value {
+                    width: 50%;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $breakpoint-two) {
+    .AboutMe {
+        flex-direction: column;
+
+        &-About {
+            width: 100%;
+            padding-right: 0;
+        }
+
+        &-Basic {
+            width: 100%;
+            padding-left: 0;
+            margin-top: 1.5rem;
+
+            &-Item {
+                &-Name {
+                    width: 50%;
+                }
+    
+                &-Value {
+                    width: 50%;
+                    word-wrap: break-word;
+                }
+            }
         }
     }
 }
