--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -15,7 +15,7 @@
         }
     }
     
-    &-Basic {
+    &-Bio {
         width: 50%;
         display: flex;
         padding-left: 1rem;
@@ -46,7 +46,7 @@
 
 @media screen and (max-width: $breakpoint-one) {
     .AboutMe {
-        &-Basic {
+        &-Bio {
             &-Item {
                 &-Name {
                     width: 50%;
@@ -69,7 +69,7 @@
             padding-right: 0;
         }
 
-        &-Basic {
+        &-Bio {
             width: 100%;
             padding-left: 0;
             margin-top: 1.5rem;
@@ -77,7 +77,7 @@
             &-Item {
                 display: flex;
                 justify-content: space-between;
-                
+
                 &-Name {
                     width: 45%;
                 }
