--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,8 +1,9 @@
 .Tile {
     width: 80rem;
-    margin: 5rem auto;
+    margin: 4rem auto;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    padding: 2rem;
 }
 
 .TileTitle {
