--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -1,3 +1,5 @@
+@import '../../scss/settings.scss';
+
 .Timeline {
     display: flex;
     flex-direction: column;
@@ -56,5 +58,23 @@
 
     &:last-child {
         padding-bottom: 0rem;
+    }
+}
+
+@media screen and (max-width: $breakpoint-two) {
+    .TimelineItem {
+        width: 100%;
+
+        &:nth-child(2n) {
+            align-self: flex-end;
+            align-items: flex-start;
+            text-align: start;
+            border-right: none;
+            border-left: 2px solid #333;
+            
+            & > .TimelineItem-Dot {
+                margin-left: calc(-2rem - 1px - 0.5rem);
+            }
+        }
     }
 }
