--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -84,7 +84,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'montserrat', sans-serif;
   vertical-align: baseline;
   line-height: 1.35rem;
 }
