--- a/src/components/ProjectItem/ProjectItem.scss
+++ b/src/components/ProjectItem/ProjectItem.scss
@@ -3,12 +3,19 @@
 .ProjectItem {
     display: flex;
 
-    &-Image {
-        width: 28rem;
-        height: fit-content;
-        border: 2px solid #333;
-        padding: 0.1rem;
+    & a {
+        text-decoration: none;
+        color: #035397;
+    }
+
+    &-ImageContainer {
+        height: 15rem;
         margin-right: 2rem;
+    }
+
+    &-Image {
+        width: inherit;
+        height: 100%;
     }
 
     &-Content {
@@ -30,8 +37,14 @@
 
     &-Footer {
         display: flex;
+        flex-grow: 1;
         justify-content: space-between;
-        margin-top: 1rem;
+        align-items: flex-end;
+        margin-top: 1.5rem;
+
+        & a {
+            color: #333;
+        }
     }
 
     &-Links {
@@ -49,6 +62,8 @@
 
     &-FooterLink {
         margin-right: 1rem;
+        overflow: hidden;
+        width: 4.5rem;
         text-align: center;
         text-decoration: none;
         color: #333;
@@ -68,47 +83,84 @@
         height: fit-content;
     }
     
+    &-SpaceAfter {
+        margin-bottom: 0.7rem;
+    }
+
     &:nth-child(2n) {
         flex-direction: row-reverse;
 
         & .ProjectItem {
-            &-Image {
-                margin-right: 0rem;
+            &-ImageContainer {
                 margin-left: 2rem;
+                margin-right: 0rem;
             }
-            
-            &-Footer {
-                flex-direction: row-reverse;
+
+            &-Links {
+                justify-content: flex-end;
             }
         }
     }
 }
 
+@media screen and (max-width: $breakpoint-one) {
+    .ProjectItem {
+        &-ImageContainer {
+            height: 10rem;
+        }
+    }
+}
 @media screen and (max-width: $breakpoint-two) {
     .ProjectItem {
         flex-direction: column-reverse;
 
-        &-Image {
-            width: 100%;
+        &-ImageContainer {
             margin: 0rem;
             margin-top: 1.5rem;
+            width: 100%;
+            height: fit-content;
         }
 
         &-Header {
             margin-top: 0rem;
         }
 
-        &:nth-child(2) {
+        &-Footer {
+            flex-direction: column;
+        }
+
+        &-Links {
+            width: 100%;
+            justify-content: flex-end;
+            margin-bottom: 1rem;
+        }
+
+        &-FooterLink {
+            margin-left: 0.8rem;
+            margin-right: 0rem;
+        }
+
+        &:nth-child(2n) {
             flex-direction: column-reverse;
 
             & .ProjectItem {
-                &-Image {
+                &-ImageContainer {
                     margin: 0rem;
                     margin-top: 1.5rem;
                 }
-                
+
                 &-Footer {
-                    flex-direction: row;
+                    flex-direction: column;
+                }
+
+                &-Links {
+                    width: 100%;
+                    justify-content: flex-end;
+                    margin-bottom: 1rem;
+                }
+
+                &-FooterLink {
+                    margin-left: 0.8rem;
                 }
             }
         }
