--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -1,3 +1,12 @@
+:root {
+  --black: #333;
+  --white: #fff;
+  --light-grey: #eee;
+  --grey: #dadada;
+  --dark-grey: #aaa;
+  --theme: #035397;
+}
+
 /* Screen width break points */
 $breakpoint-one: 1420px;
 $breakpoint-two: 920px;
