--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 30rem;
-  background-color: black;
+  background-color: #000;
 
   &-Image {
     height: 100%;
@@ -23,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: var(--white);
     font-weight: bold;
 
     &-ProfileImage {
@@ -31,7 +31,7 @@
       width: 12rem;
       object-fit: cover;
       border-radius: 7rem;
-      border: 5px solid white;
+      border: 5px solid var(--white);
       transition: 200ms;
 
       &:hover {
