--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #eee;
+  background-color: var(--light-grey);
   padding: 3rem 0;
 
   &-Icons {
@@ -12,19 +12,19 @@
   &-Name {
     font-size: 1.8rem;
     font-weight: 700;
-    margin-top: 2rem;
+    margin-top: 3rem;
   }
 
   &-Info {
     margin-top: 1rem;
-    color: #333;
+    color: var(--black);
 
     & a {
       text-decoration: none;
       color: inherit;
 
       &:hover {
-        color: #035397;
+        color: var(--theme);
       }
     }
   }
