--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -12,18 +12,18 @@
   }
 
   &-Bar {
-    background-color: #dadada;
+    background-color: var(--grey);
     border-radius: 0.3rem;
   }
 
   &-Progress {
     height: inherit;
-    background-color: #035397;
+    background-color: var(--theme);
     border-radius: inherit;
   }
 
   &-Level {
-    color: white;
+    color: var(--white);
     height: 100%;
     display: flex;
     align-items: center;
