--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -13,8 +13,8 @@
   padding-top: 0rem;
 
   &-Period {
-    background-color: #dadada;
-    color: #333;
+    background-color: var(--light-grey);
+    color: var(--black);
     font-weight: bold;
     border-radius: 0.25rem;
     padding: 0.5rem 0.75rem;
@@ -33,7 +33,7 @@
   }
 
   &-Dot {
-    background-color: #333;
+    background-color: var(--black);
     width: 1rem;
     height: 1rem;
     border-radius: 1rem;
@@ -43,7 +43,7 @@
     align-self: flex-end;
     align-items: flex-start;
     text-align: start;
-    border-left: 2px solid #333;
+    border-left: 2px solid var(--black);
 
     & > .TimelineItem-Dot {
       margin-left: calc(-2rem - 1px - 0.5rem);
@@ -54,7 +54,7 @@
     align-self: flex-start;
     align-items: flex-end;
     text-align: end;
-    border-right: 2px solid #333;
+    border-right: 2px solid var(--black);
 
     & > .TimelineItem-Dot {
       margin-right: calc(-2rem - 1px - 0.5rem);
@@ -76,7 +76,7 @@
       align-items: flex-start;
       text-align: start;
       border-right: none;
-      border-left: 2px solid #333;
+      border-left: 2px solid var(--black);
 
       & > .TimelineItem-Dot {
         margin-left: calc(-2rem - 1px - 0.5rem);
