--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,6 +1,4 @@
 .Tile {
-  width: 70rem;
-  margin: 4rem auto;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 2rem;
@@ -8,7 +6,7 @@
 
 .TileTitle {
   text-align: start;
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin-bottom: 2rem;
 }
 
@@ -22,14 +20,19 @@ a {
   }
 }
 
+.Section {
+  width: 70rem;
+  margin: 5rem auto;
+}
+
 @media screen and (max-width: $breakpoint-one) {
-  .Tile {
+  .Section {
     width: 50rem;
   }
 }
 
 @media screen and (max-width: $breakpoint-two) {
-  .Tile {
+  .Section {
     width: 20rem;
   }
 }
