--- a/src/components/SocialIcon/SocialIcon.scss
+++ b/src/components/SocialIcon/SocialIcon.scss
@@ -2,6 +2,9 @@
 
 .SocialIcon {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 3rem;
   height: 3rem;
   border-radius: 2rem;
@@ -10,10 +13,7 @@
 
   &-Icon {
     color: var(--white);
-    width: 100%;
-    height: 100%;
     font-size: 1.4rem;
-    text-align: center;
   }
 
   &:hover {
