--- a/src/components/AppearanceItem/AppearanceItem.scss
+++ b/src/components/AppearanceItem/AppearanceItem.scss
@@ -1,6 +1,6 @@
 @import '../../scss/settings.scss';
 
-.TalkItem {
+.AppearanceItem {
   width: auto;
   margin: 0;
   display: grid;
@@ -8,6 +8,7 @@
   grid-template-areas:
     'title title title'
     'event event image'
+    'kind kind image'
     'text text image'
     'period links image';
   gap: 1rem 2rem;
@@ -111,6 +112,19 @@
     word-wrap: break-word;
   }
 
+  &-Kind {
+    margin-bottom: 1rem;
+    text-align: inherit;
+    background-color: var(--theme);
+    color: white;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    width: fit-content;
+    text-decoration: none;
+    font-size: 1rem;
+
+  }
+
   // &:nth-child(2n) {
   //   grid-template-columns: 3fr 1.5fr 3fr;
   //   grid-template-areas:
@@ -121,20 +135,22 @@
 }
 
 @media screen and (max-width: $breakpoint-one) {
-  .TalkItem {
+  .AppearanceItem {
     grid-template-columns: 2fr 3fr 4fr;
   }
 }
 
 @media screen and (max-width: $breakpoint-two) {
-  .TalkItem {
+  .AppearanceItem {
     grid-template-columns: auto;
     grid-template-areas:
       'title title'
+      'event event'
+      'kind kind'
       'image image'
-      'period period'
       'text text'
-      'links links';
+      'links links'
+      'period period';
 
     &-ImageContainer {
       width: fit-content;
